<resources>
    <string name="app_name">Story App</string>
    <string name="codec_logo">This is App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="fullname">Fullname</string>
    <string name="ttl_register">Create your account</string>
    <string name="ttl_regis_desc">Get full access to the apps with your account✍</string>
    <string name="ttl_login">Login</string>
    <string name="ttl_log_desc">Start using the apps by login with your account</string>
    <string name="reg_to_login">Already registered?</string>
    <string name="login_to_rec">First time coming here?</string>
    <string name="error_register">There is an error while creating account, please try again</string>
    <string name="error_form_valid">Form must be valid and filled, please try again</string>
    <string name="success_register">Registration Process Succeeds</string>
    <string name="error_login">There is an error while, please try again</string>
    <string name="success_login">Login Succeeds</string>
    <string name="dialog_logout">Sure you want to logout?</string>
    <string name="coded_button_add">Add story</string>
    <string name="list_story">List Story</string>
    <string name="error_fetch_story">There is an error while fetch stories data, please try again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="codec_image_story">Image of story</string>
    <string name="codec_button_gallery">Add from gallery</string>
    <string name="codec_button_camera">Add from camera</string>
    <string name="ttl_select_image">Select from:</string>
    <string name="ttl_write_story">Type your story:</string>
    <string name="add_story_text_hint">At the moment....</string>
    <string name="dialog_choose_image">Choose a Picture</string>
    <string name="ttl_add_story">Add Story</string>
    <string name="fld_story_error">Form cannot be empty</string>
    <string name="fld_email_error">Email is invalid</string>
    <string name="fld_pass_error">Password length minimum is 8 character</string>
    <string name="error_upload_story">There is an error while upload stories data, please try again</string>
    <string name="success_upload_story">Add Story Succeeds</string>
    <string name="ttl_detail_toolbar">%s\'s Story</string>
    <string name="ttl_menu_settings">Setting</string>
    <string name="ttl_menu_logout">Logout</string>
    <string name="save">Save</string>
    <string name="activate_location">Please, activate location permission</string>
    <string name="story_user_placeholder">%s\'s Story</string>
    <string name="error_loading_message">"Unable to get stories data"</string>
    <string name="settings">Settings</string>
    <string name="field_location">Share Location</string>
    <string name="ttl_see_story">Click To See Detail Story</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="ttl_detail_story">Detail Story</string>
</resources>