<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.appcompat.widget.Toolbar
        android:theme="@style/ToolbarStyle"
        android:id="@+id/tbl_add_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/tbl_add_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_story"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/placeholder"
                app:shapeAppearanceOverlay="@style/RoundedStyleImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                style="@style/HeadingText"
                android:id="@+id/tv_ttl_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/ttl_select_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_story" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/icon_camera"
                android:contentDescription="@string/codec_button_camera"
                app:maxImageSize="30dp"
                app:tint="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tv_ttl_select_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_ttl_select_image"
            />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_gallery"
                android:contentDescription="@string/codec_button_gallery"
                android:layout_marginStart="16dp"
                app:maxImageSize="30dp"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="@+id/btn_camera"
                app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
                app:layout_constraintStart_toEndOf="@+id/btn_camera"/>

            <TextView
                android:id="@+id/tv_ttl_location"
                style="@style/HeadingText"
                android:text="@string/field_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_ttl_select_image"
                app:layout_constraintTop_toTopOf="@id/sw_location"
                app:layout_constraintBottom_toBottomOf="@+id/sw_location"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sw_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/btn_camera"
                app:layout_constraintStart_toEndOf="@+id/tv_ttl_location"
                />

            <TextView
                android:id="@+id/tv_location"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_location"
                app:layout_constraintEnd_toEndOf="parent"
                 />

            <TextView
                style="@style/HeadingText"
                android:id="@+id/tv_ttl_write_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/ttl_write_story"
                app:layout_constraintTop_toBottomOf="@id/tv_location"
                app:layout_constraintStart_toStartOf="@id/tv_ttl_select_image"
                 />


            <EditText
                style="@style/EditText"
                android:id="@+id/edt_story"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/add_story_text_hint"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ttl_write_story"
                tools:ignore="VisualLintTextFieldSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/subview_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>